# omni-notify

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker-publish.yml
src/: env.rs  error.rs  handlers.rs  main.rs  structures.rs
src/handlers/: email.rs  mod.rs  models.rs  push.rs  pushdeer.rs  telegram.rs  tests.rs
