[package]
name = "omni-notify"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = 'abort'
strip = true
lto = true
codegen-units = 1

[dependencies]
actix-web = "4.4.1"
env_logger = "0.10.1"
lettre = { version = "0.11.1", features = ["rustls-tls"] }
pico-args = { version = "0.5.0", features = ["short-space-opt"] }
reqwest = "0.11.23"
serde = { version = "1.0.193", features = ["derive"] }
