[package]
name = "omni-notify"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = 'abort'
strip = true
lto = true
codegen-units = 1
opt-level = 'z'

[dependencies]
actix-web = { version = "4.4.1", default-features = false, features = ["macros"] }
env_logger = { version = "0.10.1",default-features = false, features = ["humantime"] }
lazy_static = { version = "1.4.0", default-features = false }
lettre = { version = "0.11.1", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }
pico-args = { version = "0.5.0", default-features = false, features = ["short-space-opt"] }
reqwest = { version = "0.11.23", default-features = false, features =["rustls-tls"] }
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
