[package]
name = "omni-notify"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = 'abort'
strip = true
lto = true
codegen-units = 1
opt-level = 'z'

[dependencies]
axum = { version = "0.7.5", default-features = false, features = [
    "http1",
    "tokio",
    "macros",
    "query",
    "form",
    "json",
] }
lettre = { version = "0.11.1", default-features = false, features = [
    "builder",
    "smtp-transport",
    "rustls-tls",
] }
pico-args = { version = "0.5.0", default-features = false, features = [
    "short-space-opt",
] }
reqwest = { version = "0.11.23", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
tokio = { version = "1.38.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "registry",
    "fmt",
    "env-filter",
] }

[dev-dependencies]
dotenv = { version = "0.15.0", default-features = false }
serde_json = { version = "1.0.117", default-features = false }
tower = { version = "0.4.13", default-features = false }
http-body-util = { version = "0.1.1", default-features = false }
